<resources>
    <string name="app_name">E-Kuisoner</string>
    <string name="logo_poltekpos">Logo Poltekpos</string>
    <string name="logo_dsc">Logo DSC</string>
    <string name="logo_irc">Logo IRC</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="list_pertanyaan">List Pertanyaan</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="copyright">Copyright © 2018 E-Kuisoner | Powered by</string>
</resources>
