<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="3dp"
        android:text="@string/list_pertanyaan"/>

    <RadioGroup
        android:id="@+id/radioGrup"
        android:layout_below="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <RadioButton
            android:textSize="15sp"
            android:id="@+id/rbValueOf1"
            android:hint="@string/value_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:textSize="15sp"
            android:id="@+id/rbValueOf2"
            android:hint="@string/value_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:textSize="15sp"
            android:id="@+id/rbValueOf3"
            android:hint="@string/value_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:textSize="15sp"
            android:id="@+id/rbValueOf4"
            android:hint="@string/value_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <RadioButton
            android:textSize="15sp"
            android:id="@+id/rbValueOf"
            android:hint="@string/value_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    </RadioGroup>

</RelativeLayout>